{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 10,
  "lineage": "b9b35040-8752-bde1-685a-e6fd4abf52df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_deepak_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125462713:internet-gateway/igw-05db1211829081fa7",
            "id": "igw-05db1211829081fa7",
            "owner_id": "211125462713",
            "tags": {
              "Name": "test-deepak-igw"
            },
            "tags_all": {
              "Name": "test-deepak-igw"
            },
            "vpc_id": "vpc-022909e09a0d58096"
          },
          "dependencies": [
            "aws_vpc.test_deepak_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "test_deepak_public_rtb_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05db1211829081fa7",
            "id": "r-rtb-0da1e3c68ca2a919d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da1e3c68ca2a919d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_deepak_igw",
            "aws_route_table.test_deepak_public_rtb",
            "aws_vpc.test_deepak_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_deepak_private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125462713:route-table/rtb-0177af80dca9cd6d6",
            "id": "rtb-0177af80dca9cd6d6",
            "owner_id": "211125462713",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-deepak-private-rtb"
            },
            "tags_all": {
              "Name": "test-deepak-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-022909e09a0d58096"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_deepak_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_deepak_public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125462713:route-table/rtb-0da1e3c68ca2a919d",
            "id": "rtb-0da1e3c68ca2a919d",
            "owner_id": "211125462713",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-deepak-public-rtb"
            },
            "tags_all": {
              "Name": "test-deepak-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-022909e09a0d58096"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_deepak_igw",
            "aws_vpc.test_deepak_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_deepak_private_rtb_asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096597cd6bdaace17",
            "route_table_id": "rtb-0177af80dca9cd6d6",
            "subnet_id": "subnet-0940f893b7b9f7ff3"
          },
          "dependencies": [
            "aws_route_table.test_deepak_private_rtb",
            "aws_subnet.test_deepak_private_subnet",
            "aws_vpc.test_deepak_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_deepak_public_rtb_asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090db259b16fa4604",
            "route_table_id": "rtb-0da1e3c68ca2a919d",
            "subnet_id": "subnet-06f057ac279e00757"
          },
          "dependencies": [
            "aws_internet_gateway.test_deepak_igw",
            "aws_route_table.test_deepak_public_rtb",
            "aws_subnet.test_deepak_public_subnet",
            "aws_vpc.test_deepak_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_deepak_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125462713:subnet/subnet-0940f893b7b9f7ff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0940f893b7b9f7ff3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125462713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-deepak-private-subnet"
            },
            "tags_all": {
              "Name": "test-deepak-private-subnet"
            },
            "vpc_id": "vpc-022909e09a0d58096"
          },
          "dependencies": [
            "aws_vpc.test_deepak_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_deepak_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125462713:subnet/subnet-06f057ac279e00757",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f057ac279e00757",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125462713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-deepak-public-subnet"
            },
            "tags_all": {
              "Name": "test-deepak-public-subnet"
            },
            "vpc_id": "vpc-022909e09a0d58096"
          },
          "dependencies": [
            "aws_vpc.test_deepak_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_deepak_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125462713:vpc/vpc-022909e09a0d58096",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ded341e84fcf3235",
            "default_route_table_id": "rtb-09ea055dfa240123f",
            "default_security_group_id": "sg-0dd0cbecd39395125",
            "dhcp_options_id": "dopt-06fe717902e9bb9a2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022909e09a0d58096",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ea055dfa240123f",
            "owner_id": "211125462713",
            "tags": {
              "Name": "test-deepak-vpc"
            },
            "tags_all": {
              "Name": "test-deepak-vpc"
            }
          }
        }
      ]
    }
  ]
}